--- a/group/templates/create_group.html
+++ b/group/templates/create_group.html
@@ -8,31 +8,16 @@
     </div>
     <div class="form-mine">
     <form method="post">{% csrf_token %}
-{#        {% for field in form %}#}
-{#            {% if field.errors %}#}
-{#                <div class="form-group has-error">#}
-{#                    <p>{{ field.name }}:#}
-{#                    {{ field }}</p>#}
-{#                    <div class="help-block with-errors">{{ field.errors }}</div>#}
-{#                </div>#}
-{#            {% else %}#}
-{#            <div class="form-group">#}
-{#                <p>{{ field.name }}:#}
-{#                    {{ field }}</p>#}
-{#                <div class="help-block with-errors">{{ field.errors }}</div>#}
-{#            </div>#}
-{#            {% endif %}#}
-{#        {% endfor %}#}
         {% if form.group_name.errors %}
             <div class="form-group has-error">
                 <label for="group_name" class="control-label">Group name</label>
-                <input class="form-control" placeholder="PM-14-1" for={{ form.group_name }}
+                <input class="form-control" placeholder="group name" name="group_name" {% if form.group_name.value %} value="{{ form.group_name.value }}" {% endif %}>
                 <div class="help-block with-errors">{{ form.group_name.errors }}</div>
             </div>
         {% else %}
             <div class="form-group">
                 <label for="group_name" class="control-label">Group name</label>
-                <input class="form-control" placeholder="PM-14-1" for={{ form.group_name }}
+                <input class="form-control" placeholder="group name" name="group_name" {% if form.group_name.value %} value="{{ form.group_name.value }}" {% endif %}>
             </div>
         {% endif %}
         <div class="form-group has-error">
