--- a/student/templates/update_student.html
+++ b/student/templates/update_student.html
@@ -8,72 +8,64 @@
     </div>
     <div class="form-mine">
     <form method="post">{% csrf_token %}
-{#        {% for field in form %}#}
-{#            <div class="form-group">#}
-{#                <p>{{ field.name }}:#}
-{#                    {{ field }}</p>#}
-{#                <div class="help-block with-errors">{{ field.errors }}</div>#}
-{#            </div>#}
-{#        {% endfor %}#}
-
         {% if form.first_name.errors %}
             <div class="form-group has-error">
                 <label for="first_name" class="control-label">First name</label>
-                <input class="form-control" for={{ form.first_name }}
+                <input class="form-control" value="{{ student.first_name }}" name="first_name">
                 <div class="help-block with-errors">{{ form.first_name.errors }}</div>
             </div>
         {% else %}
             <div class="form-group">
                 <label for="first_name" class="control-label">First name</label>
-                <input class="form-control" for={{ form.first_name }}
+                <input class="form-control" value="{{ student.first_name }}" name="first_name">
             </div>
         {% endif %}
         {% if form.last_name.errors %}
             <div class="form-group has-error">
                 <label for="last_name" class="control-label">Last name</label>
-                <input class="form-control" for={{ form.last_name }}
+                <input class="form-control" value="{{ student.last_name }}" name="last_name">
                 <div class="help-block with-errors">{{ form.last_name.errors }}</div>
             </div>
         {% else %}
             <div class="form-group">
                 <label for="last_name" class="control-label">Last name</label>
-                <input class="form-control" for={{ form.last_name }}
+                <input class="form-control" value="{{ student.last_name }}" name="last_name">
             </div>
         {% endif %}
         {% if form.middle_name.errors %}
             <div class="form-group has-error">
                 <label for="middle_name" class="control-label">Middle name</label>
-                <input class="form-control" placeholder="Marvollo" for={{ form.middle_name }}
+                <input class="form-control" placeholder="Marvollo" value="{{ student.middle_name }}" name="middle_name">
                 <div class="help-block with-errors">{{ form.middle_name.errors }}</div>
             </div>
         {% else %}
             <div class="form-group">
-                <label for="middle_name" class="control-label">Last name</label>
-                <input class="form-control" for={{ form.middle_name }}
+                <label for="middle_name" class="control-label">Middle name</label>
+                <input class="form-control" value="{{ student.middle_name }}" name="middle_name">
             </div>
         {% endif %}
         {% if form.year_of_birth.errors %}
             <div class="form-group has-error">
                 <label for="year_of_birth" class="control-label">Year of birth</label>
-                <input class="form-control" for={{ form.year_of_birth }}
+                <input class="form-control" value="{{ student.year_of_birth }}" name="year_of_birth">
                 <div class="help-block with-errors">{{ form.year_of_birth.errors }}</div>
             </div>
         {% else %}
             <div class="form-group">
                 <label for="year_of_birth" class="control-label">Year of birth</label>
-                <input class="form-control" for={{ form.year_of_birth }}
+                <input class="form-control" value="{{ student.year_of_birth }}" name="year_of_birth">
             </div>
         {% endif %}
         {% if form.student_id.errors %}
             <div class="form-group has-error">
                 <label for="student_id" class="control-label">Student's id</label>
-                <input class="form-control" for={{ form.student_id }}
+                <input class="form-control" value="{{ student.student_id }}" name="student_id">
                 <div class="help-block with-errors">{{ form.student_id.errors }}</div>
             </div>
         {% else %}
             <div class="form-group">
                 <label for="student_id" class="control-label">Student's id</label>
-                <input class="form-control" for={{ form.student_id }}
+                <input class="form-control" value="{{ student.student_id }}" name="student_id">
             </div>
         {% endif %}
 
