--- a/group/templates/delete_group.html
+++ b/group/templates/delete_group.html
@@ -13,7 +13,7 @@
         <form action="" method="post">{% csrf_token %}
             <p>Are you sure you want to delete {{ object }}?</p>
             <button type="submit" class="btn btn-danger">Yes, delete it</button>
-            <button type="reset" class="btn btn-default" onclick="location.href='{% url 'groups:groups' %}'">No, don't delete it</button>
+            <button type="reset" class="btn btn-primary" onclick="location.href='{% url 'groups:groups' %}'">No, don't delete it</button>
         </form>
     </div>
     </div>
