--- a/group/templates/groups_list.html
+++ b/group/templates/groups_list.html
@@ -4,9 +4,7 @@
 {% endblock %}
 {% block body %}
     <div class="container">
-    <div class="label-mine">
-        <h1>Groups List</h1>
-    </div>
+        <h1 class="label-mine">Groups List</h1>
     <div class="col-md-3"></div>
     <div class="col-md-6">
         {% if object_list %}
@@ -21,9 +19,6 @@
                     <td><a href='{% url 'groups:info' group.id %}'>{{ group.group_name }}</a></td>
                     <td>{{ group.student_set.count }}</td>
                     <td>{{ group.elder }}</td>
-{#                    <td><button type="button" class="btn btn-info" onclick="location.href='{% url 'groups:info' group.id %}'">View</button>#}
-{#                    <button type="button" class="btn btn-warning" onclick="location.href='{% url 'groups:update' group.id %}'">Update</button>#}
-{#                    <button type="button" class="btn btn-danger" onclick="location.href='{% url 'groups:delete' group.id %}'">Delete</button></td>#}
                 </tr>
             {% endfor %}
             </table>
