--- a/group/templates/update_group.html
+++ b/group/templates/update_group.html
@@ -3,9 +3,7 @@
     <title>Update group</title>
 {% endblock %}
 {% block body %}
-    <div class="label-mine">
-        <h1>Update group {{ group.group_name }}</h1>
-    </div>
+        <h1 class="label-mine">Update group {{ group.group_name }}</h1>
     <div class="form-mine">
     <form method="post">{% csrf_token %}
         {% if form.group_name.errors %}
@@ -24,9 +22,8 @@
             <p>Elder:{{ form.elder }}</p>
             <div class="help-block with-errors">{{ form.elder.errors }}</div>
         </div>
-
         <div class="text-center">
-            <button type="submit" class="btn btn-success">Save</button>
+            <button type="submit" class="btn btn-success" style="margin-bottom: 50px">Save</button>
         </div>
     </form>
     </div>
