--- a/static/core.css
+++ b/static/core.css
@@ -1,16 +1,12 @@
 .label-mine{
     text-align: center;
-    min-height:100%;
     position: relative;
-    margin-bottom: 5%;
-}
-.user{
-    color: #716f54;
+    margin-bottom: 50px;
+    margin-top: 50px;
 }
 .footer-mine{
-    margin: 7.5px;
     padding: 15px 15px;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 20px;
     height: 50px;
     color: #c8c8c8;
@@ -18,11 +14,9 @@
     text-align: center;
 }
 .body{
-    /*padding-bottom: 10%;*/
     background-color: gainsboro;
+    min-height: 700px;
 }
-
-
 .navbar-default {
   background-color: #3a3f44;
   border-color: #2b2e32;
@@ -59,43 +53,35 @@
   padding-left: 15px;
   padding-right: 15px;
 }
-
-
-
 .btn-default{
     background-color: #3a3f44;
     color: #c8c8c8;
+    margin-bottom: 50px;
 }
-
+.btn-default:hover,
+.btn-default:focus{
+    background-color: #091f2b;
+    color: #c8c8c8;
+}
+.btn-home{
+    background-color: #3a3f44;
+    color: #c8c8c8;
+    height: 200px;
+    width: 200px;
+    margin-right: 20px;
+    margin-top: 50px;
+}
+.btn-home:hover,
+.btn-home:focus{
+    background-color: #091f2b;
+    color: #c8c8c8;
+}
 .form-mine{
     margin-left: 38%;
     margin-right: 38%;
-    margin-bottom: 10%;
-    margin-top: 10%;
-    /*text-align: center;*/
+    margin-top: 20px;
+    background-color: gainsboro;
 }
-
-.basic-mine{
-    margin-bottom: 5%;
-    margin-top: 5%;
-    /*text-align: center;*/
-}
-.home-mine{
-    margin-bottom: 10%;
-    margin-top: 8%;
-    text-align: center;
-}
-
-/*.core-mine{*/
-    /*margin-bottom: 20%;*/
-    /*margin-top:100px;*/
-    /*margin-left: -20%;*/
-    /*margin-right: -19%;*/
-    /*text-align: center;*/
-    /*background: lightblue;*/
-    /*height: 200px;*/
-/*}*/
-
 .message{
     background-color: #ffdbe3;
     /*height: 150px;*/
