--- a/student/templates/students_list.html
+++ b/student/templates/students_list.html
@@ -4,19 +4,14 @@
 {% endblock %}
 {% block body %}
     <div class="container">
-    <div class="label-mine">
-        <h1>Students List</h1>
-    </div>
+        <h1 class="label-mine">Students List</h1>
     <div class="col-md-4"></div>
     <div class="col-md-4">
-{#    <div class="col-md-1"></div>#}
-{#    <div class="col-md-10">#}
     {% if object_list %}
         <table class="table table-bordered">
             <tr class="warning">
                 <th>Student's id</th>
                 <th>Student</th>
-
             </tr>
             {% for student in object_list %}
                 <tr class="active">
