--- a/student/templates/update_student.html
+++ b/student/templates/update_student.html
@@ -3,9 +3,7 @@
     <title>Update student</title>
 {% endblock %}
 {% block body %}
-    <div class="label-mine">
-        <h1>Update student {{ student.last_name }}</h1>
-    </div>
+    <h1 class="label-mine">Update student {{ student.last_name }}</h1>
     <div class="form-mine">
     <form method="post">{% csrf_token %}
         {% if form.first_name.errors %}
@@ -68,14 +66,12 @@
                 <input class="form-control" value="{{ student.student_id }}" name="student_id">
             </div>
         {% endif %}
-
             <div class="form-group has-error">
                 <p>Group:{{ form.group }}</p>
                 <div class="help-block with-errors">{{ form.group.errors }}</div>
             </div>
-
         <div class="text-center">
-            <button type="submit" class="btn btn-success">Save</button>
+            <button type="submit" class="btn btn-success" style="margin-bottom: 50px">Save</button>
         </div>
     </form>
     </div>
