--- a/templates/basic.html
+++ b/templates/basic.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href={% static "core.css" %}>
 </head>
 <body>
-<div class="body">
-    <div class="container">
+<div class="container">
+    <div class="body">
         <div class="bs-component">
               <nav class="navbar navbar-default">
                   <div class="container-fluid">
@@ -32,24 +32,19 @@
                   </div>
               </nav>
         </div>
-
-        <div class="basic-mine">
-            {% block body %}
-            {% endblock %}
-        </div>
-
-{#        <div class="bs-component">#}
-{#            <nav class="navbar navbar-default">#}
-{#                <a class="navbar-footer" href="#">reference 1</a>#}
-{#                <a class="navbar-footer" href="#">reference 2</a>#}
-{#            </nav>#}
-{#        </div>#}
-        <div class="footer-mine">
-            <a class="footer-mine" href="https://ua.linkedin.com/in/dianagafonova">Created by: Diana Agafonova</a>
-            <a class="footer-mine" href="https://github.com/DiankaDS/university">GitHub: university</a>
-        </div>
-
+        {% block body %}
+        {% endblock %}
     </div>
+        <div class="footer-mine">
+            <div class="col-md-2"></div>
+            <div class="col-md-4">
+                <span>Created by:</span><a class="footer-mine" href="https://ua.linkedin.com/in/dianagafonova">Diana Agafonova</a>
+            </div>
+            <div class="col-md-4">
+                <span>GitHub:</span><a class="footer-mine" href="https://github.com/DiankaDS/university">university</a>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
 </div>
 </body>
 </html>
