--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -13,7 +13,7 @@
             {% if request.user.profile_image %}
                 <tr class="active">
                     <td>Photo:</td>
-                    <td><img src="{{ request.user.profile_image.url }}" style="height: 150px; width: 150px"></td>
+                    <td><img src="{{ request.user.profile_image.url }}" style="height: 150px; width: 120px"></td>
                 </tr>
             {% endif %}
             <tr class="active">
@@ -22,23 +22,43 @@
             </tr>
             <tr class="active">
                 <td>First name:</td>
-                <td>{{ request.user.first_name }}</td>
+                {% if request.user.first_name %}
+                    <td>{{ request.user.first_name }}</td>
+                {% else %}
+                    <td>-</td>
+                {% endif %}
             </tr>
             <tr class="active">
                 <td>Last name:</td>
-                <td>{{ request.user.last_name }}</td>
+                {% if request.user.last_name %}
+                    <td>{{ request.user.last_name }}</td>
+                {% else %}
+                    <td>-</td>
+                {% endif %}
             </tr>
             <tr class="active">
                 <td>Email:</td>
-                <td>{{ request.user.email }}</td>
+                {% if request.user.email %}
+                    <td>{{ request.user.email }}</td>
+                {% else %}
+                    <td>-</td>
+                {% endif %}
             </tr>
             <tr class="active">
                 <td>Address:</td>
-                <td>{{ request.user.address }}</td>
+                {% if request.user.address %}
+                    <td>{{ request.user.address }}</td>
+                {% else %}
+                    <td>-</td>
+                {% endif %}
             </tr>
             <tr class="active">
                 <td>Mobile phone:</td>
-                <td>{{ request.user.mobile_phone }}</td>
+                {% if request.user.mobile_phone %}
+                    <td>{{ request.user.mobile_phone }}</td>
+                {% else %}
+                    <td>-</td>
+                {% endif %}
             </tr>
         </table>
     </div>
