--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -4,9 +4,7 @@
 {% endblock %}
 {% block body %}
     <div class="container">
-        <div class="label-mine">
-            <h1>Profile on University</h1>
-        </div>
+        <h1 class="label-mine">Profile on University</h1>
     <div class="col-md-4"></div>
     <div class="col-md-4">
         <table class="table table-bordered">
